# LHPR-VLN-instructions-visualized-inside-HM3D-scenes

./: .gitignore  README.md  lhpr_batch6_matched_local_scenes.txt  open_hm3d_viewer.sh  pyproject.toml  requirements.txt
configs/paths/: local.yaml
configs/replay/: batch6_kettle_task.yaml
configs/simulator/: habitat_rgb.yaml
examples/: check_batch6_subtask_counts.py  check_exact_lhpr_instruction.py  check_lhpr_zip_sizes.py  download_lhpr_batch.py  extract_lhpr_matched_task_info.py  find_lhpr_scene_files.py  find_tasks_with_local_scenes.py  list_lhpr_files.py  render_hm3d_scene.py
notes/: hm3d_dataset_explanation.md  lhpr_dataset_understanding.md
outputs/lhpr_task_reports/: task_01_report.json
scripts/: check_configs.py  check_task_loading.py  run_pose_replay.py  run_pose_replay_recording.py  run_replay.py
src/lhpr_vln/: __init__.py  action_loader.py  config.py  habitat_pose_replay.py  habitat_replay.py  pose_loader.py  task_loader.py
tools/: check_task_integrity.py  extract_task_report.py  find_tasks_with_local_scenes.py
